Fixed text wrapping and being centered on dialog on mobile

--- a/styles.css
+++ b/styles.css
@@ -351,8 +351,6 @@ main {
     justify-content: center;
     align-items: center;
 
-    flex-wrap: wrap;
-
     gap: 16px;
 
     margin-left: 16px;
@@ -380,6 +378,7 @@ main {
     color: #F5F5F5;
     margin-top: 32px;
     margin-bottom: 14px;
+    text-align: center;
 }
 
 .subline-text {
